# k2p-web

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Brewfile  Dockerfile  LICENSE  Makefile  README.md  docker-compose-local.yml  docker-compose.pg.yml  docker-compose.prod.nginx.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  pytest.ini
.github/workflows/: prod-compose-check.yml  prod-ready-check.yml  release-docker.yml  tests.yml
api/: manage.py
api/apps/core/: admin_views.py  apps.py  db_logging.py  health.py
api/apps/jobs/: admin.py  apps.py  k8s.py  metrics.py  metrics_api.py  metrics_worker.py  models.py  runner.py  security.py  serializers.py  urls.py  views.py
api/k2pweb/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
api/static/: robots.txt  sitemap.xml
api/static/ui/: app.css  app.js  app_view.js  manifest_utils.js
deploy/nginx/: cloudflare_ips.conf  nginx.conf
docs/: Architecture.md  Before frontend.md  Capacity gate.md  Plan.md  Skeleton.md  UX.md  requests.txt
nginx/: nginx.conf
scripts/: bootstrap-macos.sh  do-droplet-preparation.sh  docker_run.sh  kind-create.sh  kind-load-images.sh  kind-run-k2p-job.sh  kubeconfig-kind.sh  local-check.sh  prod-droplet-check.sh  prod-ready-check.sh  reset-db.sh  update_cloudflare_ips.sh
tests/: conftest.py  test_abuse_controls.py  test_cleanup_command.py  test_core_health.py  test_import_safety.py  test_job_create_serializer.py  test_jobs_k8s.py  test_jobs_views.py  test_no_cookies.py  test_schema_access.py  test_worker_logs.py
tests/ui/: manifest_utils.test.js
(+10 files in other folders)
