[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "k2pweb"
version = "0.1.0"
description = "K2P web API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Django==5.2.10",
  "djangorestframework==3.16.1",
  "PyYAML==6.0.2",
  "psycopg[binary]==3.2.5",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.2",
  "pytest-cov==6.0.0",
  "pytest-django==4.8.0",
  "python-dotenv==1.0.1",
  "ruff==0.9.4",
]

[tool.setuptools]
package-dir = {"" = "api"}

[tool.setuptools.packages.find]
where = ["api"]
include = ["k2pweb", "apps", "apps.*"]
